manifest/ArgoCD/ingress-argo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.ndthang.com
      http:
        paths:
          - backend:
              service:
                name: argocd-applicationset-controller
                port:
                  number: 8080
            path: /
            pathType: Prefix
